@@ -1,3 +1,8 @@
+2006-01-11  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/25730
+	* gfortran.dg/used_types_1.f90: New test.
+
 2006-01-10  Jan Beulich  <jbeulich@novell.com>
 
 	* lib/target-supports.exp (check_visibility_available): Simplify test
